src/LuckyDraw V1.0/src/objects/sfcma__SetupWizardSteps__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>sfcma__step1IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__step2IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sfcma__step3IsComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete Step 3</label>
        <type>Checkbox</type>
    </fields>
    <label>Setup Wizard Steps</label>
</CustomObject>